@@ -3,6 +3,8 @@
 
 Version 8.0.7
 
+  - WL#10531, Support utf8mb4 as default charset.
+
   - Fix for Bug#85555 (25757019), useConfigs Can't find configuration template named, in mysql-connector-java 6.x
 
   - WL#10529, Move version number to 8.0.
